# amr_ws

./: .gitignore  o-bash.md  o-bash.txt
amr_ros2_ui/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
amr_ros2_ui/log/: latest_build
map/: nav2_khazg_first.rviz
src/: main.cpp
src/amr_bringup/: README.md  package.xml  setup.cfg  setup.py
src/amr_bringup/amr_bringup/: amr_serial_bridge.py
src/amr_bringup/config/: 99-amr-devices.rules  amr_params.yaml  nav2_params.yaml  slam_toolbox_params.yaml
src/amr_bringup/launch/: amr_launch.py  nav2_launch.py  slam_launch.py
src/amr_bringup/log/: latest_list
src/amr_bringup/urdf/: amr.urdf
src/amr_ros2_ui/: README.md  amr_control_panel.py  amr_main_window.ui  amr_serial_qt_bridge.py  amr_ui_preview.html
src/my_nav/: my_nav.rviz
src/my_slam/: amr_slam.rviz  slam_1.rviz
